--- a/TranslateSc/files/requirements.txt
+++ b/TranslateSc/files/requirements.txt
@@ -3,7 +3,6 @@ certifi==2020.6.20
 chardet==3.0.4
 distlib==0.3.1
 filelock==3.0.12
-googletrans==3.0.0
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -13,8 +12,12 @@ httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
 keyboard==0.13.5
+MouseInfo==0.1.3
 Pillow==7.2.0
 pinyin==0.4.0
+PyAutoGUI==0.9.50
+PyGetWindow==0.0.8
+PyMsgBox==1.0.8
 pyobjc==6.2.2
 pyobjc-core==6.2.2
 pyobjc-framework-Accounts==6.2.2
@@ -129,14 +132,13 @@ pyobjc-framework-VideoSubscriberAccount==6.2.2
 pyobjc-framework-VideoToolbox==6.2.2
 pyobjc-framework-Vision==6.2.2
 pyobjc-framework-WebKit==6.2.2
+pyperclip==1.8.0
+PyRect==0.1.4
+PyScreeze==0.1.26
 pytesseract==0.3.6
+PyTweening==1.0.3
 rfc3986==1.4.0
+rubicon-objc==0.4.0
 six==1.15.0
 sniffio==1.1.0
 virtualenv==20.0.31
-
-pip~=20.2.2
-wheel~=0.35.1
-setuptools~=49.6.0
-PyAutoGUI~=0.9.50
-pyperclip~=1.8.0
