--- a/TranslateSc/files/requirements.txt
+++ b/TranslateSc/files/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17
 appdirs==1.4.4
 certifi==2020.6.20
 chardet==3.0.4
@@ -12,11 +13,14 @@ httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
 keyboard==0.13.5
+macholib==1.14
 MouseInfo==0.1.3
 Pillow==7.2.0
 pinyin==0.4.0
 PyAutoGUI==0.9.50
 PyGetWindow==0.0.8
+pyinstaller==4.0
+pyinstaller-hooks-contrib==2020.8
 PyMsgBox==1.0.8
 pyobjc==6.2.2
 pyobjc-core==6.2.2
@@ -133,6 +137,8 @@ pyobjc-framework-VideoToolbox==6.2.2
 pyobjc-framework-Vision==6.2.2
 pyobjc-framework-WebKit==6.2.2
 pyperclip==1.8.0
+PyQt5==5.15.1
+PyQt5-sip==12.8.1
 PyRect==0.1.4
 PyScreeze==0.1.26
 pytesseract==0.3.6
